# task-list

./: .example.env  .gitignore  README.md  alembic.ini  pyproject.toml
app/adapters/sqlalchemy_db/: gateway.py
app/adapters/sqlalchemy_db/migrations/: env.py
app/adapters/sqlalchemy_db/migrations/versions/: 20241207-195518_e0233d349362_added_initial_table.py  20241208-122928_f4a9ef14ceec_add_users_table.py  20241208-123009_34944589603e_add_users_table.py  20241208-190755_554df0901ce0_add_tables.py  20241208-215430_60d3226e8ce8_add_tables.py
app/adapters/sqlalchemy_db/models/: __init__.py  task.py  user.py
app/api/: index.py  root.py  task.py
app/application/: auth_backend.py  exceptions.py  fastapi_users.py  task.py  user_manager.py
app/application/models/: __init__.py  reorder_request.py  task.py  user.py
app/application/protocols/: database.py
app/main/: di.py  routers.py  web.py
